Style/cartpage_style.css
/* For portrait*/

@media screen and (orientation: portrait) {
    /* Top nav styling */
    #top_navigation {
        background-color: white;
        height: 122px;
        padding-top: 10px;
    }

    .logo {
        top: 10px;
        height: 52px;
    }

    #category_icon {
        position: absolute;
        top: 25px;
        left: 28px;
        color: #6c7075;
        font-size: 25px;
    }

    #promotion_icon {
        position: absolute;
        top: 25px;
        right: 28px;
        color: #f28500;
        font-size: 25px;
    }

    .ui-filterable {
        width: auto;
        margin-left: 25px;
        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
        margin-right: 25px;
    }

    #filter_icon {
        text-align: center;
        margin-top: 10px;
        font-size: 20px;
        color: #6c7075;
    }
}
/*landscape*/
@media screen and (orientation: landscape) {
    /* Top nav styling */
    #top_navigation {
        background-color: white;
        height: 105px;
        padding-top: 10px;
    }

    .logo {
        top: 10px;
        height: 40px;
    }

    #category_icon {
        position: absolute;
        top: 25px;
        left: 28px;
        color: #6c7075;
        font-size: 20px;
    }

    #promotion_icon {
        position: absolute;
        top: 25px;
        right: 28px;
        color: #f28500;
        font-size: 20px;
    }

    .ui-filterable {
        width: auto;
        margin-left: 20px;
        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
        margin-right: 20px;
    }

    #filter_icon {
        text-align: center;
        margin-top: 10px;
        font-size: 20px;
        color: #6c7075;
    }
}

/*Main Content*/

#addtocart-btn {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    width: 100%;
    font-size: large;
    background-color: #428fe5;
    color: white;
}

.hidden {
    display: none;
}

.fieldGroup {
    display: flex;
}

/* Bottom nav styling */

#bottom_nav {
    height: 50px;
    background: white;
}

#qrcode_icon, #home_icon, #user_icon, #other_icon {
    color: #6c7075;
    font-size: 20px;
    border: 10px solid white;
    background: white;
    text-align: center;

}

#cart_icon{
    color: #f28500;
    font-size: 20px;
    border: 10px solid white;
    background: white;
    text-align: center;

}

/*Card views styling*/

#cart-title {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    text-align: center;
    margin-bottom: 10px;
    font-size: larger;
    color: #f28500;
}


.card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    margin:20px 10px;

    padding: -20px;
    text-align: center;
}



.product-title {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 18px;
}

.product-qty {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 14px;
    color: #6c7075;
    text-align: right;

}

.product-desc {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 14px;
    color: darkgray;
}

.product-image-td {
    text-align: left;
    border-left: 10px solid #f28500;
    border-right: 1px solid gainsboro;
}

.product-data-td {
    padding-top: 5px;
    text-align: left;
    padding-left: 15px;
}

.c1, .c2, .c3 {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    margin:20px 10px;
    padding: -20px;
    text-align: center;
    /*max-width: 500px;*/
}

@media (min-width: 600px) {
    .product-title {
        font-size: 24px;
    }
    .product-price{
        font-size: 24px;
    }
    .product-qty{
        padding-top: 10px;
        padding-right: 40px;
        text-align: right;
        font-size: 18px;
    }
    .del{
        padding-top: 5px;
        padding-right: 40px;
        text-align: right;
        font-size: 20px;
    }
    .c1, c2, c3 {
        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
        margin:30px 150px;
        padding: -20px;
        text-align: center;
        /*max-width: 500px;*/
    }

}

.product-extra-td{
    padding-top: 5px;
    padding-right: 10px;
    text-align: right;
}
.product-price {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 18px;
    color: #428fe5;
}

#deletebtn1, #deletebtn2, #deletebtn3 {
    padding-bottom: 25px;
    color:#6c7075;
}


.addtocart-btn button:hover {
    opacity: 0.7;
}

#promocode-label{
    text-align:  center;

}

#promocode{
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    text-align: left;
    padding: 10px;
    font-size: 14px;
}

#apply-promo-btn {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    border-radius: 10%;
    font-size: medium;
    background-color: black;
    color: white;
}

.card2 {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    margin:20px 10px;
    padding: 20px;
    text-align: center;
}


.tr1 {
    border-bottom: 1px solid #f28500;
    text-align: left;
    padding-bottom: 30px;
}

#tr2 {
    border-top: 20px;
    text-align: right;
}

#back-btn {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: large;
    border-color: #f28500;
    width: 100%;
    color: #f28500;
}

#payment-btn{
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    width: 100%;
    font-size: large;
    background-color: #428fe5;
    color: white;
}

#share-fav-list{
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    width: 100%;
    font-size: large;
    background-color: #428fe5;
    color: white;
    position: absolute;
    right:    0;
    bottom:   0;
}
/*buttons styling*/

#back-btn {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: large;
    border-color: #f28500;
    width: 100%;
    color: #f28500;
    max-width: 300px;
}

#payment-btn{
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    width: 100%;
    font-size: large;
    background-color: #428fe5;
    color: white;
    max-width: 300px;
}



/*Empty Cart Page Styling*/

#noitems {
    margin-top: 30px;
    text-align: center;
}

